--- a/retype.yml
+++ b/retype.yml
@@ -1,11 +1,11 @@
 input: src
 output: public
-url: https://tips-docs.devserv.me
+url: https://opensource-docs.devserv.me
 branding:
-  title: DEVserv.ME Tips
+  title: DEVserv.ME Open Source
   label: Docs
 links:
-- text: DEVserv.ME Docs
+- text: DEVserv.ME OSS
   link: https://docs.devserv.me
 - text: Charl Cronje
   link: https://charl-cv.devserv.me
