--- a/retype.yml
+++ b/retype.yml
@@ -1,15 +1,15 @@
 input: src
 output: public
-url: https://opensource-docs.devserv.me
+url: https://opensource.docs.cronje.me
 branding:
-  title: DEVserv.ME Open Source
+  title: CRONje.ME Open Source
   label: Docs
 links:
-- text: DEVserv.ME OSS
-  link: https://docs.devserv.me
+- text: CRONJE.me DOCS 
+  link: https://docs.cronje.me
 - text: Charl Cronje
-  link: https://charl-cv.devserv.me
-- text: DEVserv.ME Dashboard
-  link: https://oz.devserv.me
+  link: https://charl.cronje.me
+- text: CRONje.ME Dashboard
+  link: https://nav.cronje.me
 footer:
   copyright: "webAlly &copy; Copyright {{ year }}. All rights reserved."
