--- a/retype.yml
+++ b/retype.yml
@@ -2,7 +2,7 @@ input: src
 output: public
 url: https://opensource.docs.cronje.me
 branding:
-  title: CRONje.ME Open Source
+  title: CRONje.ME | Open Source
   label: Docs
 favicon: ./favicon.png
 links:
